--- a/app/templates/exhibition.html
+++ b/app/templates/exhibition.html
@@ -41,33 +41,33 @@
 
 						<li class="[ row mb-4 align-items-baseline d-none ]">
 							<div class="[ col-md-3 ]">{{ form.name.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.name(class="form-control-plaintext input--attr", value=exhibition.name) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.name(class="form-control-plaintext input--attr", value=exhibition.name) }}</div>
 						</li>
 
 						<li class="is-active [ row mb-4 align-items-baseline ]">
 							<div class="[ col-md-3 ]"><label>Exhibition Dates</label></div>
-							<div class="[ col-lg-7 ]">{{ exhibition.start_date|date_format }}–{{ exhibition.end_date|date_format }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ exhibition.start_date|date_format }}–{{ exhibition.end_date|date_format }}</div>
 						</li>
 
 						<li class="[ row mb-4 align-items-baseline d-none ]">
 							<div class="[ col-md-3 ]">{{ form.start_date.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.start_date(class="form-control-plaintext input--attr", value=exhibition.start_date, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.start_date(class="form-control-plaintext input--attr", value=exhibition.start_date, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 align-items-baseline d-none ]">
 							<div class="[ col-md-3 ]">{{ form.end_date.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.end_date(class="form-control-plaintext input--attr", value=exhibition.end_date, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.end_date(class="form-control-plaintext input--attr", value=exhibition.end_date, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 align-items-baseline ]">
 							<div class="[ col-md-3 ]">{{ form.opening.label }}</div>
-							<div class="is-active [ col-lg-7 ]">{% if exhibition.opening %}{{ exhibition.opening|date_format }}{% else %}None{% endif %}</div>
-							<div class="[ col-lg-7 d-none ]">{{ form.opening(class="form-control-plaintext input--attr", value=exhibition.opening, readonly=true) }}</div>
+							<div class="is-active [ col-10 col-md-9 col-lg-7 ]">{% if exhibition.opening %}{{ exhibition.opening|date_format }}{% else %}None{% endif %}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 d-none ]">{{ form.opening(class="form-control-plaintext input--attr", value=exhibition.opening, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 align-items-baseline ]">
 							<div class="[ col-md-3 ]">{{ form.comments.label }}</div>
-							<div class="[ col-lg-7 ]">
+							<div class="[ col-10 col-md-9 col-lg-7 ]">
 								<p class="is-active [ m-0 ]">{{ exhibition.comments }}</p>
 								{{ form.comments(class="form-control-plaintext input--attr d-none", value=exhibition.comments, readonly=true, disabled=true) }}
 							</div>
@@ -92,7 +92,7 @@
 								<div class="[ col-md-3 ]">
 									<label for="artworks">Park</label>
 								</div>
-								<div class="[ col-lg-7 ]">
+								<div class="[ col-10 col-md-9 col-lg-7 ]">
 									<a href="{{ url_for('park', id=park.id) }}">{{ park.name }}</a>
 								</div>
 							</li>
@@ -126,7 +126,7 @@
 
 						<li class="js-li_org [ row mb-4 align-items-baseline ]">
 							<div class="[ col-md-3 ]">
-								<label for="artworks">Organization</label>
+								<label for="artworks">Org</label>
 							</div>
 								<div class="[ col-10 col-md-8 col-lg-6 ]">
 									<a href="{{ url_for('org', id=org.id) }}" class="is-active">{{ org.name }}</a>
@@ -210,102 +210,102 @@
 
 						<li class="is-active [ row mb-4 ]">
 							<div class="[ col-md-3 ]"><label>Install Date{% if exhibition.install_end %}s{% endif %}</label></div>
-							<div class="[ col-lg-7 ]">{{ exhibition.install_start|date_format }}{% if exhibition.install_end %}–{{ exhibition.install_end|date_format }}{% endif %}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ exhibition.install_start|date_format }}{% if exhibition.install_end %}–{{ exhibition.install_end|date_format }}{% endif %}</div>
 						</li>
 
 						<li class="[ row mb-4 d-none ]">
 							<div class="[ col-md-3 ]">{{ form.install_start.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.install_start(class="form-control-plaintext input--attr", value=exhibition.install_start, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.install_start(class="form-control-plaintext input--attr", value=exhibition.install_start, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 d-none ]">
 							<div class="[ col-md-3 ]">{{ form.install_end.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.install_end(class="form-control-plaintext input--attr", value=exhibition.install_end, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.install_end(class="form-control-plaintext input--attr", value=exhibition.install_end, readonly=true) }}</div>
 						</li>
 
 <!-- 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-3 ]">{{ form.prm.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.prm(class="form-control-plaintext", value=exhibition.prm, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.prm(class="form-control-plaintext", value=exhibition.prm, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-3 ]">{{ form.approval.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.approval(class="form-control-plaintext", value=exhibition.approval, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.approval(class="form-control-plaintext", value=exhibition.approval, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-3 ]">{{ form.walkthrough.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.walkthrough(class="form-control-plaintext", value=exhibition.walkthrough, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.walkthrough(class="form-control-plaintext", value=exhibition.walkthrough, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-3 ]">{{ form.cb_presentation.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.cb_presentation(class="form-control-plaintext", value=exhibition.cb_presentation, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.cb_presentation(class="form-control-plaintext", value=exhibition.cb_presentation, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-3 ]">{{ form.license_mailed.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.license_mailed(class="form-control-plaintext", value=exhibition.license_mailed, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.license_mailed(class="form-control-plaintext", value=exhibition.license_mailed, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-3 ]">{{ form.license_signed.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.license_signed(class="form-control-plaintext", value=exhibition.license_signed, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.license_signed(class="form-control-plaintext", value=exhibition.license_signed, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-3 ]">{{ form.license_borough.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.license_borough(class="form-control-plaintext", value=exhibition.license_borough, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.license_borough(class="form-control-plaintext", value=exhibition.license_borough, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-3 ]">{{ form.bond.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.bond(class="form-control-plaintext", value=exhibition.bond, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.bond(class="form-control-plaintext", value=exhibition.bond, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-3 ]">{{ form.coi.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.coi(class="form-control-plaintext", value=exhibition.coi, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.coi(class="form-control-plaintext", value=exhibition.coi, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-3 ]">{{ form.coi_renewal.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.coi_renewal(class="form-control-plaintext", value=exhibition.coi_renewal, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.coi_renewal(class="form-control-plaintext", value=exhibition.coi_renewal, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-3 ]">{{ form.coi_renewal.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.coi_renewal(class="form-control-plaintext", value=exhibition.coi_renewal, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.coi_renewal(class="form-control-plaintext", value=exhibition.coi_renewal, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-3 ]">{{ form.signage_submit.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.signage_submit(class="form-control-plaintext", value=exhibition.signage_submit, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.signage_submit(class="form-control-plaintext", value=exhibition.signage_submit, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-3 ]">{{ form.signage_received.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.signage_received(class="form-control-plaintext", value=exhibition.signage_received, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.signage_received(class="form-control-plaintext", value=exhibition.signage_received, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-3 ]">{{ form.press_draft.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.press_draft(class="form-control-plaintext", value=exhibition.press_draft, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.press_draft(class="form-control-plaintext", value=exhibition.press_draft, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-3 ]">{{ form.press_approved.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.press_approved(class="form-control-plaintext", value=exhibition.press_approved, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.press_approved(class="form-control-plaintext", value=exhibition.press_approved, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-3 ]">{{ form.web_text.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.web_text(class="form-control-plaintext", value=exhibition.web_text, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.web_text(class="form-control-plaintext", value=exhibition.web_text, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-3 ]">{{ form.work_images.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.work_images(class="form-control-plaintext", value=exhibition.work_images, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.work_images(class="form-control-plaintext", value=exhibition.work_images, readonly=true) }}</div>
 						</li> -->
 
 					</ul>
@@ -323,27 +323,27 @@
 
 						<li class="is-active [ row mb-4 align-items-baseline ]">
 							<div class="[ col-md-3 ]">{{ form.deinstall_date.label }}</div>
-							<div class="[ col-lg-7 ]">{{ exhibition.deinstall_date|date_format }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ exhibition.deinstall_date|date_format }}</div>
 						</li>
 
 						<li class="[ row mb-4 align-items-baseline d-none ]">
 							<div class="[ col-md-3 ]">{{ form.deinstall_date.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.deinstall_date(class="form-control-plaintext input--attr", value=exhibition.deinstall_date, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.deinstall_date(class="form-control-plaintext input--attr", value=exhibition.deinstall_date, readonly=true) }}</div>
 						</li>
 
 <!-- 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-4 ]">{{ form.deinstall_check.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.deinstall_check(class="form-control-plaintext", value=exhibition.deinstall_check, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.deinstall_check(class="form-control-plaintext", value=exhibition.deinstall_check, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-4 ]">{{ form.bond_return.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.bond_return(class="form-control-plaintext", value=exhibition.bond_return, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.bond_return(class="form-control-plaintext", value=exhibition.bond_return, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 ]">
 							<div class="[ col-md-4 ]">{{ form.press_clippings.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.press_clippings(class="form-control-plaintext", value=exhibition.press_clippings, readonly=true) }}</div>
+							<div class="[ col-10 col-md-9 col-lg-7 ]">{{ form.press_clippings(class="form-control-plaintext", value=exhibition.press_clippings, readonly=true) }}</div>
 						</li> -->
 
 					</ul>
@@ -385,7 +385,7 @@
 		<div class="[ col-md-3 ]">
 			<label for="artworks">Park</label>
 		</div>
-		<div class="[ col-10 col-md-6 ]">
+		<div class="[ col-10 col-md-8 col-lg-6 ]">
 			<input id="js-datalist_park" type="text" name="parks" list="parks" data-value="" value="" placeholder="Park Name" class="js-datalist-child js-datalist_park input--attr [ form-control ]">
 			{{ datalist("parks", parks) }}
 		</div>
@@ -397,7 +397,7 @@
 <script id="js-template_org" type="text/template">
 	<li class="js-li_org [ row mb-4 align-items-baseline ]">
 		<div class="[ col-md-3 ]">
-			<label for="artworks">Organization</label>
+			<label for="artworks">Org</label>
 		</div>
 		<div class="[ col-10 col-md-8 col-lg-6 ]">
 			<input id="js-datalist_org" type="text" name="orgs" list="orgs" data-value="" value="" placeholder="Organization Name" class="js-datalist-child js-datalist_org input--attr [ form-control ]">
